# sql_ml_ui_project1

./: .env  README.md  app.py  index.html  ml_pipeline.ipynb  preprocessor.pkl  pyproject.toml  requirements.txt  sql_ml.session.sql  steps.txt  stress_level_pipeline.pkl
